src/test/test-models/bad/prob-fun-args-no-bar.stan
parameters {
  real y;
}
model {
  target += normal_lpdf(y, 0, 1);
}
